--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transformer",
+  "name": "transformador",
   "main": "./lib/transformer",
   "version": "1.0.0",
   "description": "Transformer is package that allow you to execute small modifications on words on numbers",
